force-app/main/default/objects/Framework_Opportunity_Group__c/Framework_Opportunity_Group__c.object-meta.xml
<CustomObject>
    <description>RO - 1632</description>
    <label>Framework Opportunity Group</label>
    <nameField>
        <label>Framework Opportunity Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Framework Opportunity Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>