force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO - 1632</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Framework Opportunity Groups</relationshipLabel>
    <relationshipName>Framework_Opportunity_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>