force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO - 1692 ( The Opportunity with the latest contract start date)</description>
    <label>Legacy Active Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Framework Opportunity Groups</relationshipLabel>
    <relationshipName>Framework_Opportunity_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>