force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Base_Goal_3__c.field-meta.xml
<CustomField>
    <fullName>Base_Goal_3__c</fullName>
    <formula>Framework_Opportunity__r.Base_Volume__c</formula>
    <label>Base Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>