force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Base_Goal__c.field-meta.xml
<CustomField>
    <fullName>Base_Goal__c</fullName>
    <description>RO - 1632</description>
    <label>Legacy Base Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>