force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Base_Goal_achievement__c.field-meta.xml
<CustomField>
    <fullName>Base_Goal_achievement__c</fullName>
    <description>RO - 1631</description>
    <formula>(Bookings_in_Current_contract__c /   Base_Goal_2__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Goal achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>