force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Bookings_in_Current_contract__c.field-meta.xml
<CustomField>
    <fullName>Bookings_in_Current_contract__c</fullName>
    <description>RO - 1632</description>
    <label>Bookings in Current contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>