force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Boost_Goal_2__c.field-meta.xml
<CustomField>
    <fullName>Boost_Goal_2__c</fullName>
    <formula>Framework_Opportunity__r.Boost_Volume__c</formula>
    <label>Boost Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>