force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Boost_Goal__c.field-meta.xml
<CustomField>
    <fullName>Boost_Goal__c</fullName>
    <description>RO - 1632</description>
    <label>Legacy Boost Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>