force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Boost_Goal_achievement__c.field-meta.xml
<CustomField>
    <fullName>Boost_Goal_achievement__c</fullName>
    <description>RO - 1632</description>
    <formula>(Bookings_in_Current_contract__c /  Boost_Goal_2__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boost Goal achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>