force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Contract_End_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_date__c</fullName>
    <formula>Framework_Opportunity__r.Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End date</label>
    <type>Date</type>
</CustomField>