force-app/main/default/objects/Framework_Opportunity_Group__c/fields/Framework_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Framework_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO - 1632</description>
    <label>Framework Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Framework Opportunity Groups (Framework Opportunity)</relationshipLabel>
    <relationshipName>Framework_Opportunity_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>